[package]
name = "tokio-par-util"
description = "Utilities for running computations in parallel on top of Tokio"
keywords = ["tokio", "futures", "parallelism", "structured", "stream"]
categories = ["asynchronous", "concurrency", "data-structures", "rust-patterns"]
repository = "https://github.com/modal-labs/tokio-par-util"
readme = "README.md"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
futures-util = "0.3.31"
pin-project = "1.1.9"
tokio = "1.43.0"
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
dashmap = "6.1.0"
scopeguard = "1.2.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[features]
tracing = ["dep:tracing"]
